--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,5 @@
+- large icons for preview panel
+
 - All Windows messaging enums
 http://senapi.blogspot.com/2007/11/all-windows-messages-c-enum.html
 
