--- a/trunk/Todo.txt
+++ b/trunk/Todo.txt
@@ -1,3 +1,5 @@
+- paths aren't being opened from settings correctly
+- fix icons in compressed files
 - tools menu
 - attributes for plugins (for when there is a UI)
 - large icons for preview panel
@@ -6,7 +8,5 @@
 http://www.hanselman.com/blog/ScalingResizingResamplingAnImageInASPNET.aspx
 
 - stress test the logging functionality
-- drive name string format
-- fix icons in compressed files
 
 http://www.softpanorama.org/OFM/Paradigm/Ofm_01.shtml#Ten_commandments
