--- a/trunk/ChangeLog.txt
+++ b/trunk/ChangeLog.txt
@@ -1,5 +1,19 @@
-0.70
+0.70 - 05/11/2008
+	KNOWN ISSUE: Some large compressed files corrupt the program.
+	Add preview panel that shows text in a file or thumbnails for images and dynamic information about the currently selected filesytem obejct.
+	Add about box and icon for the program.
+	Check for correct version of the settings file when starting the program for settings file compatibility.
+	Add dynamic tools menu to start a process with custom inputs.
+	Renaming file usability.
+		- Select just the filename.
+		- Show tooltip balloon when an incorrect character is typed for filenames.
+	Provide ability to define custom template for drive information.
+	Save previous directory index.
+	Save filtering history.
+	Complete update and overhaul of settings XML file and the code to load it.
+	FIX: Filtering was broken.
 	FIX: Progress shows correctly for long-running operations.
+	FIX: Drives that weren't ready, i.e. a floppy disk drive.
 
 0.65 - Speedy Gonzales  - 3/30/2008
 	Rewritten core of the file retrieval routine which created a dramatic speedup in retrieving files/directories.
@@ -16,8 +30,8 @@
 	Beginning of support to swap out views on the fly.
 	Update to panel settings.
 	 	- Change panel orientation.
-		Toggle panel being collapsed.
-		Toggle filter shown.
+		- Toggle panel being collapsed.
+		- Toggle filter shown.
 	FIX: Most common broken paths that are entered can now be determined.
 	FIX: Auto-complete of paths.
 	FIX: Adding/disconnecting a drive would have inconsistent behavior.
