Edited wiki page through web user interface.

--- a/wiki/CurrentChangelog.wiki
+++ b/wiki/CurrentChangelog.wiki
@@ -1,6 +1,9 @@
 #summary Current changelog
 #labels Featured
 
+=== 0.7.051208 ===
+ * FIX: Default Time column incorrectly showed the date. [Issue 85: Marc.GIRAUDOU]
+
 === 0.70 - 05/11/2008 ===
  * KNOWN ISSUE: Some large compressed files corrupt the program.
  * Add preview panel that shows text in a file or thumbnails for images and dynamic information about the currently selected filesytem obejct.
