--- a/wiki/CurrentChangelog.wiki
+++ b/wiki/CurrentChangelog.wiki
@@ -1,12 +1,16 @@
 #summary Current changelog
 #labels Featured
+=== 0.7.0.052008 === 
+ * FIX: Compressed files did not show icons for their contents. [Issue 88]
+ * FIX: Compressed files with folders would never show their contents. [Issue 87]
+ * FIX: Compressed file Time column incorrectly showed the date. [Issue 86: Marc.GIRAUDOU]
 
 === 0.7.0.051208 ===
  * FIX: Default Time column incorrectly showed the date. [Issue 85: Marc.GIRAUDOU]
 
 === 0.7.0.051108 ===
  * KNOWN ISSUE: Some large compressed files corrupt the program.
- * Add preview panel that shows text in a file or thumbnails for images and dynamic information about the currently selected filesytem obejct.
+ * Add preview panel that shows text in a file or thumbnails for images and dynamic information about the currently selected filesytem object.
  * Add about box and icon for the program.
  * Check for correct version of the settings file when starting the program for settings file compatibility.
  * Add dynamic tools menu to start a process with custom inputs.
