--- a/wiki/CurrentChangelog.wiki
+++ b/wiki/CurrentChangelog.wiki
@@ -1,8 +1,8 @@
 #summary Current changelog
 #labels Featured
 === 0.7.0.052008 === 
- * FIX: Compressed files did not show icons for their contents. [Issue 88]
- * FIX: Compressed files with folders would never show their contents. [Issue 87]
+ * FIX: Compressed files did not show icons for their contents. [Issue: 88]
+ * FIX: Compressed files with folders would never show their contents. [Issue: 87]
  * FIX: Compressed file Time column incorrectly showed the date. [Issue 86: Marc.GIRAUDOU]
 
 === 0.7.0.051208 ===
