--- a/wiki/CurrentRoadmap.wiki
+++ b/wiki/CurrentRoadmap.wiki
@@ -7,14 +7,16 @@ This is the current, tentative, roadmap for the upcoming releases for !SharpFile
 === 0.7 Proposed Features ===
  * Configurable tool menu
  * Preview/information pane
- * Command bar for current path
+ * ~~Command bar for current path~~
 
 === 0.8 Proposed Features ===
+ * Configurable action hotkeys
+ * Command bar for current path
  * Copy/move progress dialog
  * Store column settings
 
 === 0.9 Proposed Features ===
- * Configurable action hotkeys
+ * ~~Configurable action hotkeys~~
  * GUI for settings
 
 === 1.0 Proposed Features ===
