--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,6 @@
+- extra tab functionality
+- move plugins to their own dll's
+- attributes for plugins (for when there is a settings UI)
 - finish up command line pane
 	- make dos commands work properly
 - CDROMs (or other drives that take awhile for IsReady to react to) slow down starting the program
@@ -5,7 +8,6 @@
 
 - figure out how to clone events from an object
 - split out listview class into other classes
-- attributes for plugins (for when there is a settings UI)
 - large icons for preview panel
 
 - Different resizing code:
