Edited wiki page through web user interface.

--- a/wiki/CurrentRoadmap.wiki
+++ b/wiki/CurrentRoadmap.wiki
@@ -6,13 +6,16 @@ This is the current, tentative, roadmap for the upcoming releases for !SharpFile
 
 === 0.8 Proposed Features ===
  * Configurable action hotkeys (0.7.0.061208)
- * Command bar for current path
+ * Command bar for current path (Done in the nightlies)
  * Copy/move progress dialog
  * Store column settings
 
 === 0.9 Proposed Features ===
  * ~~Configurable action hotkeys~~
  * GUI for settings
+ * Free-form browser placement
+ * Bookmarks/favorites menu
+ * _Special_/custom folders in drive dropdown
 
 === 1.0 Proposed Features ===
  * Find files
