--- a/Todo.txt
+++ b/Todo.txt
@@ -1,11 +1,9 @@
-- extra tab functionality
 - Hide close button: http://sourceforge.net/forum/forum.php?thread_id=1745143&forum_id=402316
+- make dos commands work properly for command line pane
 - move plugins to their own dll's
 - attributes for plugins (for when there is a settings UI)
-- finish up command line pane
-	- make dos commands work properly
-- CDROMs (or other drives that take awhile for IsReady to react to) slow down starting the program
-- tool command for winmerge for directory diffs
+- Floppys and CDROMs (or other drives that take awhile for IsReady to react to) slow down starting the program
+- file operations dialog
 
 - figure out how to clone events from an object
 - split out listview class into other classes
