Update the plugin pane's menu item's status when dock state changes.

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,6 @@
+- Better logging of major events in verbose mode
+- FolderCount/FileCount on ResourceContainer to show 1/24 files message in status bar
+- show more clear error message if plugin pane was built with the wrong version
 - plugin settings in the config file
 - save dockstate of each pluginpane
 - attributes for plugins (for when there is a settings UI)
