--- a/Todo.txt
+++ b/Todo.txt
@@ -1,8 +1,9 @@
 0.7.6
 - plugin settings in the config file
-- DriveDetector NRE
+- DriveDetector NRE (only in Vista?)
 
 0.7.6+
+- store last 10? filters and last 10? paths -- show path history in auto complete box (always? sometimes? configurable?)
 - figure out how to clone events from an object
 - split out listview class into other classes
 - stress test the logging functionality
