--- a/Todo.txt
+++ b/Todo.txt
@@ -1,8 +1,6 @@
-0.7.6
-- cleanup any of the reflection code that I can -- move it to common if possible
-- update post_build.bat to account for plugins
-
 0.7.6+
+- Middle click that isn't on an actual tab shouldn't close the currently active tab.
+- cleanup any of the reflection code that I can -- move it to common if possible
 - save last active tab so that closing a different tab would keep the previously active tab active
 - store last 10? filters and last 10? paths -- show path history in auto complete box (always? sometimes? configurable?)
 - figure out how to clone events from an object
