--- a/trunk/Todo.txt
+++ b/trunk/Todo.txt
@@ -1,9 +1,13 @@
-0.7.6+
+0.8
+- custom exceptions
+- IFileSystemInfo to test using built-in FileSystemInfo object
 - cleanup any of the reflection code that I can -- move it to common if possible -- use LCG
 - convert strings to consts when possible -- should free up some memory
 - store last 10? filters and last 10? paths -- show path history in auto complete box (always? sometimes? configurable?)
-- figure out how to clone events from an object
 - split out listview class into other classes
+
+- profile/improve memory cosumption
+- figure out how to clone events from an object
 - stress test the logging functionality
 
 http://www.softpanorama.org/OFM/Paradigm/Ofm_01.shtml#Ten_commandments
