--- a/trunk/ChangeLog.txt
+++ b/trunk/ChangeLog.txt
@@ -1,6 +1,7 @@
-NIGHTLIES
+0.7.6.581
 	Last active tab is saved so that it will be activated when the current tab is closed.
 	FIX: Tabs must be middle-clicked to close them, instead of just in the tab area.
+	FIX: Copy files that are in a subfolder correctly.
 
 0.7.6.572
 	New implementation of docking/tabbing functionality with DockPanel Suite.
